--- a/index.html
+++ b/index.html
@@ -1,62 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GESTORÍA GONZÁLEZ</title>
 <style>
-  /* Modal de login */
+  body { font-family: Arial, sans-serif; margin:0; padding:0; }
   #loginModal {
-    position: fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: rgba(0,0,0,0.75);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    font-family: Arial, sans-serif;
+    position: fixed; top:0; left:0; width:100%; height:100%;
+    background: rgba(0,0,0,0.75); display: flex; justify-content: center; align-items: center; z-index:9999;
   }
-
   #loginBox {
-    background: #fff;
-    padding: 40px 30px;
-    border-radius: 12px;
-    width: 380px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-    text-align: center;
-    animation: fadeIn 0.5s ease;
+    background:#fff; padding:40px 30px; border-radius:12px; width:380px; text-align:center;
   }
-
-  #loginBox h2 { margin-bottom: 20px; color: #333; }
-  #loginBox input { width: 90%; padding: 12px; margin: 8px 0; border: 1px solid #ccc; border-radius: 8px; font-size: 14px; }
-  #loginBox button { width: 95%; padding: 12px; background:#007BFF; border:none; color:#fff; font-size:16px; border-radius:8px; cursor:pointer; margin-top:10px;}
+  #loginBox input { width:90%; padding:12px; margin:8px 0; border:1px solid #ccc; border-radius:8px; font-size:14px;}
+  #loginBox button { width:95%; padding:12px; background:#007BFF; border:none; color:#fff; font-size:16px; border-radius:8px; cursor:pointer; margin-top:10px;}
   #loginBox button:hover { background:#0056b3; }
-  #errorMsg { margin-top:12px; color:red; font-size:14px; }
-  @keyframes fadeIn { from {opacity:0; transform:translateY(-20px);} to {opacity:1; transform:translateY(0);} }
-
-  /* Panel de administración solo visible para admin */
+  #errorMsg { color:red; margin-top:10px; }
+  
   #adminPanel {
-    display: none; /* oculto por defecto */
-    border: 2px solid #007BFF;
-    padding: 20px;
-    margin: 20px 0;
-    border-radius: 10px;
-    background-color: #f1f8ff;
+    display:none; border:2px solid #007BFF; padding:20px; margin:20px; border-radius:10px; background:#f1f8ff;
   }
-
-  #adminPanel input { margin: 5px 0; padding: 8px; width: 90%; border-radius: 6px; border: 1px solid #ccc; }
-  #adminPanel button { margin-top: 8px; padding: 10px 15px; border:none; border-radius:6px; background:#007BFF; color:#fff; cursor:pointer; }
+  #adminPanel input { display:block; width:90%; margin:5px 0; padding:8px; border:1px solid #ccc; border-radius:6px;}
+  #adminPanel button { padding:10px 15px; margin-top:10px; background:#007BFF; color:#fff; border:none; border-radius:6px; cursor:pointer;}
   #adminPanel button:hover { background:#0056b3; }
-  #successMsg { color:green; font-size:14px; margin-top:8px; }
+  #successMsg { color:green; margin-top:8px; }
   #userList { margin-top:10px; font-size:14px; }
 </style>
 </head>
 <body>
 
-<!-- Contenedor de tu página funcional -->
 <div id="<!DOCTYPE html>
 <html lang="es">
 <head>
@@ -246,29 +219,21 @@ document.addEventListener("DOMContentLoaded", () => {
 </body>
 </html>
 ">
-  <!-- AQUI PEGA TODO TU HTML REAL DE LA PÁGINA -->
+  <!-- Tu HTML funcional -->
   <header>
     <h1>Gestoría González</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Servicios</a></li>
-        <li><a href="#">Contacto</a></li>
-      </ul>
-    </nav>
   </header>
   <section>
-    <p>Tu contenido funcional aquí: secciones, formularios, tablas, etc.</p>
+    <p>Contenido funcional de tu página aquí...</p>
   </section>
   <footer>
     <p>© 2025 Gestoría González</p>
   </footer>
 
-  <!-- Panel de administración (solo para admin) -->
+  <!-- Panel de administración -->
   <div id="adminPanel">
-    <h3>Panel de Administración</h3>
-    <p>Agregar un nuevo usuario:</p>
-    <input type="text" id="newUser" placeholder="Nuevo usuario">
+    <h3>CREAR USUARIOS</h3>
+    <input type="text" id="newUser" placeholder="Nombre de usuario">
     <input type="password" id="newPass" placeholder="Contraseña">
     <button onclick="addUser()">Agregar Usuario</button>
     <p id="successMsg"></p>
@@ -276,7 +241,6 @@ document.addEventListener("DOMContentLoaded", () => {
   </div>
 </div>
 
-<!-- Modal de login -->
 <div id="loginModal">
   <div id="loginBox">
     <h2>Iniciar Sesión</h2>
@@ -288,81 +252,97 @@ document.addEventListener("DOMContentLoaded", () => {
 </div>
 
 <script>
-  // Usuarios iniciales
-  let users = {
-    "admin": "1234",
-    "usuario1": "pass1"
-  };
+const modal = document.getElementById('loginModal');
+const mainContent = document.getElementById('mainContent');
+const adminPanel = document.getElementById('adminPanel');
+const errorMsg = document.getElementById('errorMsg');
+const successMsg = document.getElementById('successMsg');
+const userListDiv = document.getElementById('userList');
 
-  const modal = document.getElementById('loginModal');
-  const mainContent = document.getElementById('mainContent');
-  const adminPanel = document.getElementById('adminPanel');
-  const errorMsg = document.getElementById('errorMsg');
-  const successMsg = document.getElementById('successMsg');
-  const userListDiv = document.getElementById('userList');
+mainContent.style.display = 'none';
 
-  mainContent.style.display = 'none'; // Oculta contenido hasta login
+// Login
+async function checkLogin() {
+  const username = document.getElementById('username').value.trim();
+  const password = document.getElementById('password').value;
 
-  function checkLogin() {
-    const username = document.getElementById('username').value.trim();
-    const password = document.getElementById('password').value;
-
-    if(users[username] && users[username] === password) {
+  try {
+    const res = await fetch('/api/login', {
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body: JSON.stringify({ username, password })
+    });
+    const data = await res.json();
+    if(data.ok){
       modal.style.display = 'none';
       mainContent.style.display = 'block';
       errorMsg.innerText = '';
-
-      // Solo admin ve el panel de gestión
-      if(username === 'admin') {
+      if(data.role === 'admin'){
         adminPanel.style.display = 'block';
-        renderUserList();
+        loadUsers();
       }
     } else {
-      errorMsg.innerText = "Usuario o contraseña incorrectos";
+      errorMsg.innerText = data.message || 'Login fallido';
     }
+  } catch(err){
+    console.error(err);
+    errorMsg.innerText = 'Error de conexión';
+  }
+}
+
+// Crear usuario
+async function addUser() {
+  const username = document.getElementById('newUser').value.trim();
+  const password = document.getElementById('newPass').value;
+  if(!username || !password){
+    successMsg.style.color='red';
+    successMsg.innerText = 'Complete ambos campos';
+    return;
   }
 
-  function addUser() {
-    const newUser = document.getElementById('newUser').value.trim();
-    const newPass = document.getElementById('newPass').value;
-
-    if(newUser && newPass) {
-      if(users[newUser]) {
-        successMsg.style.color = 'red';
-        successMsg.innerText = "Usuario ya existe";
-      } else {
-        users[newUser] = newPass;
-        successMsg.style.color = 'green';
-        successMsg.innerText = "Usuario agregado correctamente";
-        document.getElementById('newUser').value = '';
-        document.getElementById('newPass').value = '';
-        renderUserList();
-      }
+  try {
+    const res = await fetch('/api/users', {
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body: JSON.stringify({ username, password })
+    });
+    const data = await res.json();
+    if(res.ok){
+      successMsg.style.color='green';
+      successMsg.innerText='Usuario agregado correctamente';
+      document.getElementById('newUser').value='';
+      document.getElementById('newPass').value='';
+      loadUsers();
     } else {
-      successMsg.style.color = 'red';
-      successMsg.innerText = "Complete ambos campos";
+      successMsg.style.color='red';
+      successMsg.innerText = data.message;
     }
+  } catch(err){
+    console.error(err);
+    successMsg.style.color='red';
+    successMsg.innerText='Error al agregar usuario';
   }
+}
 
-  function renderUserList() {
-    let html = "<strong>Usuarios existentes:</strong><ul>";
-    for(let u in users) {
-      html += `<li>${u}</li>`;
-    }
-    html += "</ul>";
+// Listar usuarios
+async function loadUsers() {
+  try{
+    const res = await fetch('/api/users');
+    const users = await res.json();
+    let html = '<strong>Usuarios existentes:</strong><ul>';
+    users.forEach(u=>{ html+=`<li>${u.username}</li>`; });
+    html+='</ul>';
     userListDiv.innerHTML = html;
+  } catch(err){
+    console.error(err);
+    userListDiv.innerHTML = '<p>Error cargando usuarios</p>';
   }
+}
 
-  // Enter para login
-  document.getElementById('password').addEventListener('keyup', function(e){
-    if(e.key==='Enter') checkLogin();
-  });
-
-  // Enter para agregar usuario
-  document.getElementById('newPass').addEventListener('keyup', function(e){
-    if(e.key==='Enter') addUser();
-  });
-
+// Enter para login
+document.getElementById('password').addEventListener('keyup', e=>{ if(e.key==='Enter') checkLogin(); });
+// Enter para agregar usuario
+document.getElementById('newPass').addEventListener('keyup', e=>{ if(e.key==='Enter') addUser(); });
 </script>
 
 </body>
